<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.training.android.roomate.fragments.HomeFragment"
    android:layout_marginBottom="15dp">

    <TextView
        android:id="@+id/label1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/homeLabel"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@android:color/black"/>

    <ImageButton
        android:id="@+id/imageButton5"
        android:layout_width="50dp"
        android:padding="5dp"
        android:background="#00000000"
        android:layout_height="wrap_content"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/ic_filter"
        android:layout_alignParentTop="true"
        android:layout_alignEnd="@+id/relativeLayout"
        android:layout_above="@+id/relativeLayout" />

    <TextView
        android:id="@+id/label2"
        android:layout_below="@+id/label1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="3dp"
        android:text="@string/your_matches"
        android:textSize="16sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/label2"
        android:layout_alignTop="@+id/label2"
        android:layout_alignBottom="@id/label2"

        android:layout_marginRight="10dp"
        android:id="@+id/relativeLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="View All"
            android:background="@drawable/custom_button_background"
            android:layout_alignParentEnd="true"
            android:paddingStart="7dp"
            android:paddingEnd="7dp"
            android:paddingTop="2dp"
            android:paddingBottom="2dp"
            android:textSize="12sp"
            android:textColor="@android:color/black"/>

    </RelativeLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/label2"
        android:layout_marginTop="10dp"
        />

    <TextView
        android:id="@+id/label3"
        android:layout_below="@+id/recycler1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/related_to_your_preference"
        android:textSize="16sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/label3"
        android:layout_alignTop="@+id/label3"
        android:layout_alignBottom="@id/label3"
        android:layout_marginRight="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="View All"
            android:background="@drawable/custom_button_background"
            android:layout_alignParentEnd="true"
            android:paddingStart="7dp"
            android:paddingEnd="7dp"
            android:paddingTop="2dp"
            android:paddingBottom="2dp"
            android:textSize="12sp"
            android:textColor="@android:color/black"/>

    </RelativeLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/label3"
        android:layout_marginTop="10dp"
        />

</RelativeLayout>